compiler/testData/diagnostics/tests/cast/IsErasedToErrorType.fir.kt
fun testing(a: Any) = a is <!OTHER_ERROR!>UnresolvedType<Int><!>
